--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
       <h1>Modern luxury <span class="emphasis">travel</span></h1>
       <div class="preview baku">
         <h1>Baku</h1>
-        <img src="/images/baku.jpg" alt="Baku">
+        <img src="baku.jpg" alt="Baku">
       </div>
       <div class="preview london">
         <h1>London</h1>
-        <img src="/images/london.png" alt="London">
+        <img src="london.png" alt="London">
       </div>
       <div class="preview madrid">
         <h1>Madrid</h1>
-        <img src="/images/madrid.jpg" alt="Madrid">
+        <img src="madrid.jpg" alt="Madrid">
       </div>
       <div class="preview rome">
         <h1>Rome</h1>
-        <img src="/images/Rome.jpg" alt="Rome">
+        <img src="Rome.jpg" alt="Rome">
       </div>
     </section>
   </body>
